--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,30 +9,35 @@ description = 'Helps migrating database schema changes using pydal. '
 readme = "README.md"
 requires-python = ">=3.10"
 license = "MIT"
-keywords = ['pydal','postgresql','migrate','schema-change','database-migration']
+keywords = ['pydal', 'postgresql', 'migrate', 'schema-change', 'database-migration']
 authors = [
-  { name = "Remco", email = "remco@educationwarehouse.nl" },
+    { name = "Remco", email = "remco@educationwarehouse.nl" },
 ]
 classifiers = [
-  "Development Status :: 4 - Beta",
-  "Programming Language :: Python",
-  "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3.11",
-  "Programming Language :: Python :: Implementation :: CPython",
-  "Programming Language :: Python :: Implementation :: PyPy",
+    "Development Status :: 4 - Beta",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: Implementation :: CPython",
+    "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
-  "pydal>=20221110.1",
-  'plumbum',
-  'psycopg2-binary',
-  'redis',
+    "pydal>=20221110.1",
+    'plumbum',
+    'psycopg2-binary',
+    'redis',
+    'python-dotenv',
+    'configuraptor>=1.21',
 ]
 
 [project.optional-dependencies]
 dev = [
     "hatch",
-    "python-semantic-release",
+    "python-semantic-release<8",
     "black",
+    "isort",
+    "pytest",
+    "pytest-cov",
 ]
 
 [project.scripts]
@@ -56,19 +61,19 @@ path = "src/edwh_migrate/__about__.py"
 
 [tool.hatch.envs.default]
 dependencies = [
-  "coverage[toml]>=6.5",
-  "pytest",
+    "coverage[toml]>=6.5",
+    "pytest",
 ]
 [tool.hatch.envs.default.scripts]
 test = "pytest {args:tests}"
 test-cov = "coverage run -m pytest {args:tests}"
 cov-report = [
-  "- coverage combine",
-  "coverage report",
+    "- coverage combine",
+    "coverage report",
 ]
 cov = [
-  "test-cov",
-  "cov-report",
+    "test-cov",
+    "cov-report",
 ]
 
 [[tool.hatch.envs.all.matrix]]
@@ -77,78 +82,68 @@ python = ["3.7", "3.8", "3.9", "3.10", "3.11"]
 [tool.hatch.envs.lint]
 detached = true
 dependencies = [
-  "black>=23.1.0",
-  "mypy>=1.0.0",
-  "ruff>=0.0.243",
+    "black>=23.1.0",
+    "mypy>=1.0.0",
+    "ruff>=0.0.243",
 ]
 [tool.hatch.envs.lint.scripts]
 typing = "mypy --install-types --non-interactive {args:src/_ tests}"
 style = [
-  "ruff {args:.}",
-  "black --check --diff {args:.}",
+    "ruff {args:.}",
+    "black --check --diff {args:.}",
 ]
 fmt = [
-  "black {args:.}",
-  "ruff --fix {args:.}",
-  "style",
+    "black {args:.}",
+    "ruff --fix {args:.}",
+    "style",
 ]
 all = [
-  "style",
-  "typing",
+    "style",
+    "typing",
 ]
 
 [tool.black]
-target-version = ["py37"]
+target-version = ["py310"]
 line-length = 120
 skip-string-normalization = true
 
 [tool.ruff]
-target-version = "py37"
+target-version = "py310"
 line-length = 120
+
 select = [
-  "A",
-  "ARG",
-  "B",
-  "C",
-  "DTZ",
-  "E",
-  "EM",
-  "F",
-  "FBT",
-  "I",
-  "ICN",
-  "ISC",
-  "N",
-  "PLC",
-  "PLE",
-  "PLR",
-  "PLW",
-  "Q",
-  "RUF",
-  "S",
-  "T",
-  "TID",
-  "UP",
-  "W",
-  "YTT",
-]
-ignore = [
-  # Allow non-abstract empty methods in abstract base classes
-  "B027",
-  # Allow boolean positional values in function calls, like `dict.get(... True)`
-  "FBT003",
-  # Ignore checks for possible passwords
-  "S105", "S106", "S107",
-  # Ignore complexity
-  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
+    "F", # pyflake error
+    "E", # pycodestyle error
+    "W", # pycodestyle warning
+    "Q", # quotes
+    "A", # builtins
+    # "C4", # comprehensions - NO: doesn't allow dict()
+    # "RET", # return - NO: annoying
+    "SIM", # simplify
+    "ARG", # unused arguments
+    # "COM", # comma's - NO: annoying
+    # "PTH", # use pathlib - NO: annoying
+    "RUF", # ruff rules
 ]
 unfixable = [
-  # Don't touch unused imports
-  "F401",
+    # Don't touch unused imports
+    "F401",
+]
+extend-exclude = ["*.bak/", "venv*/"]
+
+ignore = [
+    "RUF013" # implicit Optional
 ]
 
-[tool.ruff.isort]
-known-first-party = ["_"]
+[tool.bandit]
+# bandit -c pyproject.toml -r .
+exclude_dirs = [".bak", "venv"]
+skips = [
+    "B108"  # hard coded /tmp/... files are fine for me tbh
+]
+[tool.isort]
+profile = "black"
+extend_skip_glob = ["*.bak/*"]
 
 [tool.ruff.flake8-tidy-imports]
 ban-relative-imports = "all"
@@ -162,7 +157,7 @@ source_pkgs = ["_", "tests"]
 branch = true
 parallel = true
 omit = [
-  "src/_/__about__.py",
+    "src/_/__about__.py",
 ]
 
 [tool.coverage.paths]
@@ -171,7 +166,21 @@ tests = ["tests", "*/-/tests"]
 
 [tool.coverage.report]
 exclude_lines = [
-  "no cov",
-  "if __name__ == .__main__.:",
-  "if TYPE_CHECKING:",
+    "no cov",
+    "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
 ]
+
+[tool.su6]
+# every checker:
+directory = "src"
+# 'all' and 'fix':
+include = []
+exclude = []
+# 'all':
+stop-after-first-failure = true
+# pytest:
+coverage = 100
+badge = false
+# --format json indent
+json-indent = 4
