--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,12 @@ dev = [
     "pytest-cov",
 ]
 
+[template.plugins.default]
+src-layout = true
+
+[tool.setuptools.package-data]
+"edwh_migrate" = ["py.typed"]
+
 [project.scripts]
 migrate = "edwh_migrate.migrate:console_hook"
 
@@ -105,7 +111,6 @@ all = [
 [tool.black]
 target-version = ["py310"]
 line-length = 120
-skip-string-normalization = true
 
 [tool.ruff]
 target-version = "py310"
@@ -132,7 +137,8 @@ unfixable = [
 extend-exclude = ["*.bak/", "venv*/"]
 
 ignore = [
-    "RUF013" # implicit Optional
+    "RUF013", # implicit Optional
+    "E712", # == True (for pydal queries)
 ]
 
 [tool.bandit]
