feat: custom flag directory + refactor console hooks to use list of args (after 0)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -200,3 +200,4 @@ json-indent = 4
 [tool.migrate]
 # example:
 migrate-uri = "sqlite:///tmp/migrate_example.sqlite"
+flag-location = "/tmp/migrate_flags"
