--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
     'psycopg2-binary',
     'redis',
     'python-dotenv',
-    'configuraptor>=1.21',
+    'configuraptor>=1.22',
 ]
 
 [project.optional-dependencies]
@@ -112,6 +112,9 @@ all = [
 [tool.black]
 target-version = ["py310"]
 line-length = 120
+
+[tool.mypy]
+ignore_missing_imports = true
 
 [tool.ruff]
 target-version = "py310"
