--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,8 @@ dev = [
     "pytest",
     "pytest-cov",
     "contextlib-chdir",
+    "testcontainers",
+    "SQLAlchemy-Utils", # for drop_database
 ]
 
 [template.plugins.default]
@@ -162,25 +164,6 @@ ban-relative-imports = "all"
 [tool.ruff.per-file-ignores]
 # Tests can use magic values, assertions, and relative imports
 "tests/**/*" = ["PLR2004", "S101", "TID252"]
-
-[tool.coverage.run]
-source_pkgs = ["_", "tests"]
-branch = true
-parallel = true
-omit = [
-    "src/_/__about__.py",
-]
-
-[tool.coverage.paths]
-_ = ["src/_", "*/-/src/_"]
-tests = ["tests", "*/-/tests"]
-
-[tool.coverage.report]
-exclude_lines = [
-    "no cov",
-    "if __name__ == .__main__.:",
-    "if TYPE_CHECKING:",
-]
 
 [tool.pytest.ini_options]
 pythonpath = [
