Feat: Added a --list to migrate.py, that will show all current migrations and their data. https://taiga.edwh.nl/project/ewstudents/task/59

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     'redis',
     'python-dotenv',
     'configuraptor>=1.23',
+    'tabulate',
 ]
 
 [project.optional-dependencies]
