Fix: create-flag-location toegevoegd en op true gezet om de volgende foutmelding te voorkomen:
NotADirectoryError: Flag directory /tmp/migrate_flags does not exist. Please create it or set `create_flag_location` to True.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -199,5 +199,6 @@ json-indent = 4
 
 [tool.migrate]
 # example:
+create-flag-location = true
 migrate-uri = "sqlite:///tmp/migrate_example.sqlite"
 flag-location = "/tmp/migrate_flags"
