chore: support Python 3.13 (except psycopg2 for now)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
@@ -40,6 +42,7 @@ dev = [
     "hatch",
     "python-semantic-release<8",
     "black",
+    "typedal",
     "isort",
     "pytest",
     "pytest-cov",
