--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dynamic = ["version"]
 description = 'Helps migrating database schema changes using pydal. '
 readme = "README.md"
 requires-python = ">=3.10"
-license = "MIT"
+license-expression = "MIT"
 keywords = ['pydal', 'postgresql', 'migrate', 'schema-change', 'database-migration']
 authors = [
     { name = "Remco", email = "remco@educationwarehouse.nl" },
